--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "name": "vitepress-template",
+  "type": "module",
+  "scripts": {
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
+  },
   "devDependencies": {
-    "vitepress": "^1.0.0-rc.4"
+    "vue": "^3.3.4"
   }
 }
